# Titanic

./: .gitignore  exploration.py  fiche_resume_seance5.md  graph.py  main.py  modelisation.py  pyproject.toml  resultats_logistic_regression.txt  resume_seance5.md  sceance2.py  test.py  titanic_decision_tree.py  titanic_predictions.csv  titanic_recap.py  visualiser_importance.py  your_report.html
src/: model.py  preprocessor.py
tests/: test_model.py  test_preprocessor.py
