[project]
name = "titanic-classifier"
version = "0.1.0"
description = "Classification des survivants du Titanic"
authors = [
    {name = "Votre Nom", email = "votre@email.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"